RESOLVED FIXED189895
feMorphology filter in CSS doesn't update when element moves
https://bugs.webkit.org/show_bug.cgi?id=189895
Summary feMorphology filter in CSS doesn't update when element moves
Simon Fraser (smfr)
Reported 2018-09-23 11:19:55 PDT
Created attachment 350575 [details] Testcase Load the testcase and resize the window. The filter doesn't update to follow the text.
Attachments
Testcase (1.15 KB, text/html)
2018-09-23 11:19 PDT, Simon Fraser (smfr)
no flags
Patch (7.68 KB, patch)
2018-09-23 12:39 PDT, Simon Fraser (smfr)
no flags
Simon Fraser (smfr)
Comment 1 2018-09-23 11:20:28 PDT
There is also clipping at tile boundaries.
Simon Fraser (smfr)
Comment 2 2018-09-23 11:54:28 PDT
We're not invalidating SourceAlpha
Radar WebKit Bug Importer
Comment 3 2018-09-23 12:37:16 PDT
Simon Fraser (smfr)
Comment 4 2018-09-23 12:39:23 PDT
WebKit Commit Bot
Comment 5 2018-09-24 11:20:52 PDT
Comment on attachment 350584 [details] Patch Clearing flags on attachment: 350584 Committed r236416: <https://trac.webkit.org/changeset/236416>
WebKit Commit Bot
Comment 6 2018-09-24 11:20:54 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.