Source/WebCore/svg/graphics/filters/SVGFilterBuilder.h
@@ -46,7 +46,7 @@ public:
 
     void add(const AtomicString& id, RefPtr<FilterEffect>);
 
-    RefPtr<FilterEffect> getEffectById(const AtomicString& id) const;
+    RefPtr<FilterEffect> getEffectById(const AtomicString&) const;
     FilterEffect* lastEffect() const { return m_lastEffect.get(); }
 
     void appendEffectToEffectReferences(RefPtr<FilterEffect>&&, RenderObject*);
